// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ArticleStack Slice matches snapshot with default width 1`] = `
<DocumentFragment>
  <div
    class="css-y73puv"
  >
    <div
      class="css-1th2wme"
    >
      <div
        class="css-1jza4en"
        style="margin-block: space000;"
      >
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1g5vzsh"
            />
            <div
              class="css-6wqjuf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="css-3kejzs"
                >
                  <span
                    class="css-6tvr2h"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      NEW
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1basb1c"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      PROFILE
                    </div>
                  </span>
                </div>
                <a
                  class="css-10h0i3c"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Short title of the card describing the main content
                    </span>
                  </span>
                </a>
                <p
                  class="css-1nrveqv"
                >
                  160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                </p>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-1jxv40d"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-d9hjcx"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1g5vzsh"
            >
              <hr
                aria-hidden="true"
                class="css-obfal1"
                data-testid="divider"
              />
            </div>
            <div
              class="css-6wqjuf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="css-3kejzs"
                >
                  <span
                    class="css-6tvr2h"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      EXCLUSIVE
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1basb1c"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      REVIEW
                    </div>
                  </span>
                </div>
                <a
                  class="css-10h0i3c"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Short title of the card describing the main content 2
                    </span>
                  </span>
                </a>
                <p
                  class="css-1nrveqv"
                >
                  160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                </p>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-1jxv40d"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-d9hjcx"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1th2wme"
    >
      <div
        class="css-r51htr"
      >
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1g5vzsh"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-obfal1"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-6wqjuf"
          >
            <div
              class="css-j6pksw"
            >
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Short title of the card describing the main content"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="css-3kejzs"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    NEW
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-10h0i3c"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
              <p
                class="css-1nrveqv"
              >
                160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
              </p>
              <div
                class="css-1atazsr"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1jxv40d"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-d9hjcx"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1g5vzsh"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-obfal1"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-6wqjuf"
          >
            <div
              class="css-j6pksw"
            >
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Short title of the card describing the main content 2"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="css-3kejzs"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    INTERVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-10h0i3c"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content 2
                  </span>
                </span>
              </a>
              <p
                class="css-1nrveqv"
              >
                160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
              </p>
              <div
                class="css-1atazsr"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1jxv40d"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-d9hjcx"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render ArticleStack renders with passed width 1`] = `
<DocumentFragment>
  <div
    class="css-y73puv"
  >
    <div
      class="css-1th2wme"
    >
      <div
        class="css-1eh6fyx"
        style="margin-block: space000;"
      >
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1g5vzsh"
            />
            <div
              class="css-6wqjuf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="css-3kejzs"
                >
                  <span
                    class="css-6tvr2h"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      NEW
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1basb1c"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      PROFILE
                    </div>
                  </span>
                </div>
                <a
                  class="css-10h0i3c"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Short title of the card describing the main content
                    </span>
                  </span>
                </a>
                <p
                  class="css-1nrveqv"
                >
                  160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                </p>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-1jxv40d"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-d9hjcx"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1g5vzsh"
            >
              <hr
                aria-hidden="true"
                class="css-obfal1"
                data-testid="divider"
              />
            </div>
            <div
              class="css-6wqjuf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="css-3kejzs"
                >
                  <span
                    class="css-6tvr2h"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      EXCLUSIVE
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1basb1c"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      REVIEW
                    </div>
                  </span>
                </div>
                <a
                  class="css-10h0i3c"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Short title of the card describing the main content 2
                    </span>
                  </span>
                </a>
                <p
                  class="css-1nrveqv"
                >
                  160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                </p>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-1jxv40d"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-d9hjcx"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1th2wme"
    >
      <div
        class="css-r51htr"
      >
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1g5vzsh"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-obfal1"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-6wqjuf"
          >
            <div
              class="css-j6pksw"
            >
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Short title of the card describing the main content"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="css-3kejzs"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    NEW
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-10h0i3c"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
              <p
                class="css-1nrveqv"
              >
                160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
              </p>
              <div
                class="css-1atazsr"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1jxv40d"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-d9hjcx"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1g5vzsh"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-obfal1"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-6wqjuf"
          >
            <div
              class="css-j6pksw"
            >
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Short title of the card describing the main content 2"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="css-3kejzs"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    INTERVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-10h0i3c"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content 2
                  </span>
                </span>
              </a>
              <p
                class="css-1nrveqv"
              >
                160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
              </p>
              <div
                class="css-1atazsr"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1jxv40d"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-d9hjcx"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
